# drf_htmx_renderer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
htmx_renderer/: adapters.py  apps.py  exception_handler.py  package-lock.json  package.json  renderers.py  routers.py  serializers.py  views.py
htmx_renderer/sass/: renderer.scss
htmx_renderer/templatetags/: htmx_renderer_tags.py
sample/: apps.py  asgi.py  endpoints.py  fieldsets.json  models.py  settings.py  urls.py  views.py  wsgi.py
sample/migrations/: 0001_initial.py  0002_project.py  0003_todo.py  0004_rename_name_todo_description.py  0005_todo_is_done.py  0006_caring_feeling_moodtracker.py  0006_moodtracker.py  0007_moodtracker_description.py  0008_remove_moodtracker_date.py  0009_moodtracker_date.py  0010_moodfeel.py  0011_delete_moodfeel_remove_moodtracker_description_and_more.py  0012_rename_mood_moodtracker_mood_am_moodtracker_mood_pm.py  0013_moodtracker_notes.py  0014_feeling_moodtracker_feeling.py  0015_rename_feeling_moodtracker_feelings.py  0016_care_alter_moodtracker_feelings_moodtracker_cares.py  0017_remove_todo_is_done.py  0018_moodtracker_what_didnt_work_moodtracker_what_worked.py  0019_rename_what_didnt_work_moodtracker_what_didnt_work.py  0020_moodtracker_stress.py  0021_alter_moodtracker_stress.py  0022_alter_moodtracker_stress.py  0023_alter_moodtracker_stress.py  0024_alter_moodtracker_stress.py  0025_moodtracker_energy_alter_moodtracker_stress.py  0026_alter_moodtracker_stress.py  0027_alter_moodtracker_date.py  (+2 more)
(+48 files in other folders)
